--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,77 @@
+@import url("https://fonts.googleapis.com/css?family=Dancing+Script|Josefin+Sans:300,300i,400|Nanum+Gothic|Raleway+Dots");
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: #D0CDD7;
+}
+
+.center-text {
+  height: 200px;
+  color: #787B84;
+  text-align: center;
+  position: absolute;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin-top: auto;
+  margin-bottom: auto;
+  /* margin-right: 100px; */
+  /* margin-left: 100px; */
+}
+
+p.company {
+  font-family: 'Raleway Dots', cursive;
+  color: #0B3948;
+  margin: 0;
+  /* padding: 0; */
+}
+
+p#sub-company {
+  color: #416165;
+  margin-top: -5px;
+}
+
+p {
+  font-family: 'Josefin Sans', Arial, sans-serif;
+  font-weight: 300;
+}
+
+a:link {
+  color: #787B84;
+  text-decoration: none;
+}
+
+a:hover{
+  color: #416165;
+}
+
+@media screen and (min-width: 601px) {
+  p.company {
+    font-size: 100px;
+  }
+
+  p#sub-company {
+    font-size: 25px;
+  }
+
+  p#text {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  p.company {
+    font-size: 50px;
+  }
+
+  p#sub-company {
+    font-size: 15px;
+  }
+
+  p#text {
+    font-size: 12px;
+  }
 }
